# softcard

./: Cargo.toml
.github/workflows/: release.yaml
contrib/: softcard.desktop
src/: app.rs  card.rs  cards.rs  games.rs  gui.rs  main.rs  projective.rs  selection.rs  set.rs  timed.rs  userdata.rs
src/cards/: card.rs  deck.rs  projective.rs  set.rs
src/games/: projective.rs  set.rs  timed.rs
src/gui/: shape.rs
